--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 mb-5 mb-lg-0">
-            <img src="images/LuzMa.png" alt="Image" class="img-fluid">
+            <img src="images/LuzMa2.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-6">
             <div class="row row-items">
@@ -226,7 +226,7 @@
           <div class="col-lg-6 mb-5 pl-lg-5 order-1 order-lg-2">
             <div class="pl-lg-5 ml-lg-5">
               <h2 class="site-heading text-black">Citas <strong>ONLINE</strong> Forma de Registro</h2>
-              <p class="lead text-black">Hospital San José, Av. Constituyentes #302, Torre 3, Piso 12, Consultorio 01.</p>
+              <p class="lead text-black">Hospital San José, Av. Constituyentes #302, Torre 3, Piso 12, Consultorio 01, Tel 442 319 4933</p>
               <p class="text-black-opacity-5">Estamos siempre a tu alcance, aqui puedes hacer tu cita ONLINE para tu comodidad, solo envíanos tus datos y te agendaremos.</p>
             </div>
           </div>
